# monkeysee

./: .gitignore  AUDIO_STREAMING.md  CHANGELOG.md  COMPLETION_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  FEATURES_V0.2_SUMMARY.md  FEATURES_V0.3_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_V0.2.md  SETUP.md  TESTING.md  TESTING_V0.2.md  V0.2_COMPLETION_SUMMARY.md  V0.3_COMPLETION_SUMMARY.md  V0.3_PROGRESS_SUMMARY.md  V0.4_AUDIO_RECORDING_IMPLEMENTATION.md  V0.4_CLIENT_SETPARAMETER_IMPLEMENTATION.md  setup_dependencies.sh
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/monkeysee/app/: MainActivity.kt  StreamingConfig.kt
android/app/src/main/kotlin/com/monkeysee/app/codec/: AudioEncoder.kt  VideoEncoder.kt
android/app/src/main/kotlin/com/monkeysee/app/rtsp/: AudioRtpPacketizer.kt  RtpPacketizer.kt  RtspServer.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/kotlin/com/monkeysee/app/rtsp/: RtpPacketizerTest.kt
desktop/: Cargo.toml  MACOS_VIRTUAL_CAMERA.md  README.md  WINDOWS_VIRTUAL_CAMERA.md
