[workspace]
resolver = "2"
members = [
    "monkeysee-client", "monkeysee-gui",
    "monkeysee-rtsp",
    "monkeysee-virt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MonkeySee Contributors"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
